--- a/Buptis/Resources/layout/PrivateProfileBaseActivity.xml
+++ b/Buptis/Resources/layout/PrivateProfileBaseActivity.xml
@@ -297,6 +297,8 @@
                         android:textColor="#ff262426" />
                 </RelativeLayout>
             </RelativeLayout>
+
+
             <LinearLayout
                 android:orientation="horizontal"
                 android:minWidth="25px"
@@ -313,17 +315,18 @@
                     android:textColor="#AD923E"
                     android:layout_width="164dp"
                     android:layout_height="50dp"
-                    android:id="@+id/textView11"
+                    android:id="@+id/goldtext"
                     android:layout_marginBottom="0.0dp" />
                 <ImageButton
-                    android:src="@mipmap/gold_acik"
+                    android:src="@mipmap/gold_kapali"
                     android:background="@null"
                     android:scaleType="centerInside"
                     android:layout_width="60dp"
                     android:layout_height="50dp"
-                    android:id="@+id/button1" />
+                    android:id="@+id/goldpicture" />
 
             </LinearLayout>
+      
         </LinearLayout>
         
 
