--- a/Buptis/Resources/layout/StoreKrediYukle.xml
+++ b/Buptis/Resources/layout/StoreKrediYukle.xml
@@ -62,31 +62,35 @@
                     android:paddingBottom="10dp"
                     android:layout_height="50dp"
                     android:scaleType="centerInside"
+                    android:clickable="false"
                     android:id="@+id/ımageView1" />
                 <TextView
-                    android:text="20 Kredi"
+                    android:text="200 Kredi"
                     android:textColor="#9B9B9B"
                     android:textStyle="bold"
                     android:textSize="18dp"
                     android:gravity="center"
+                    android:clickable="false"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/ımageView1"
                     android:id="@+id/textView2" />
                 <TextView
-                    android:text="44,00 ₺"
+                    android:text="19,90 ₺"
                     android:textColor="#E10068"
-                    android:textSize="16dp"
+                    android:textSize="14dp"
                     android:gravity="center"
+                    android:clickable="false"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/textView2"
                     android:id="@+id/tv1" />
                 <TextView
-                    android:text="24,00 ₺"
+                    android:text="9,90 ₺"
                     android:textColor="@android:color/white"
                     android:textSize="16dp"
                      android:gravity="center"
+                    android:clickable="false"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv1"
@@ -107,35 +111,39 @@
                     android:paddingTop="15dp"
                     android:paddingBottom="10dp"
                     android:layout_height="50dp"
+                    android:clickable="false"
                     android:scaleType="centerInside"
                     android:id="@+id/ımageView1" />
                 <TextView
-                    android:text="50 Kredi"
+                    android:text="500 Kredi"
                     android:textColor="#9B9B9B"
                     android:textStyle="bold"
                     android:textSize="18dp"
                     android:gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:clickable="false"
                     android:layout_below="@id/ımageView1"
                     android:id="@+id/textView2" />
                 <TextView
-                    android:text="54,00 ₺"
+                    android:text="39,90 ₺"
                     android:textColor="#E10068"
-                    android:textSize="16dp"
+                    android:textSize="14dp"
                     android:gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/textView2"
+                    android:clickable="false"
                     android:id="@+id/tv2" />
                 <TextView
-                    android:text="34,00 ₺"
+                    android:text="19,90 ₺"
                     android:textColor="@android:color/white"
                     android:textSize="16dp"
                      android:gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv2"
+                    android:clickable="false"
                     android:id="@+id/textView4" />
                 </RelativeLayout>
             <RelativeLayout
@@ -154,9 +162,10 @@
                     android:paddingBottom="10dp"
                     android:layout_height="50dp"
                     android:scaleType="centerInside"
+                    android:clickable="false"
                     android:id="@+id/ımageView1" />
                 <TextView
-                    android:text="100 Kredi"
+                    android:text="1000 Kredi"
                     android:textColor="#9B9B9B"
                     android:textStyle="bold"
                     android:textSize="18dp"
@@ -164,24 +173,27 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/ımageView1"
+                    android:clickable="false"
                     android:id="@+id/textView2" />
                 <TextView
-                    android:text="74,00 ₺"
+                    android:text="69,90 ₺"
                     android:textColor="#E10068"
-                    android:textSize="16dp"
+                    android:textSize="14dp"
                     android:gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/textView2"
+                    android:clickable="false"
                     android:id="@+id/tv3" />
                 <TextView
-                    android:text="54,00 ₺"
+                    android:text="29,90 ₺"
                     android:textColor="@android:color/white"
                     android:textSize="16dp"
                      android:gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv3"
+                    android:clickable="false"
                     android:id="@+id/textView4" />
                 </RelativeLayout>
              <RelativeLayout
@@ -201,9 +213,10 @@
                     android:paddingBottom="10dp"
                     android:layout_height="50dp"
                     android:scaleType="centerInside"
-                    android:id="@+id/ımageView1" />
+                    android:id="@+id/ımageView1"
+                    android:clickable="false"/>
                 <TextView
-                    android:text="200 Kredi"
+                    android:text="2000 Kredi"
                     android:textColor="#9B9B9B"
                     android:textStyle="bold"
                     android:textSize="18dp"
@@ -211,24 +224,27 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/ımageView1"
+                    android:clickable="false"
                     android:id="@+id/textView2" />
                 <TextView
-                    android:text="134,00 ₺"
+                    android:text="99,90 ₺"
                     android:textColor="#E10068"
-                    android:textSize="16dp"
+                    android:textSize="14dp"
                     android:gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/textView2"
+                    android:clickable="false"
                     android:id="@+id/tv4" />
                 <TextView
-                    android:text="84,00 ₺"
+                    android:text="49,90 ₺"
                     android:textColor="@android:color/white"
                     android:textSize="16dp"
                      android:gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv4"
+                    android:clickable="false"
                     android:id="@+id/textView4" />
                 </RelativeLayout>
         </RelativeLayout>
