--- a/Buptis/Resources/layout/LoginBaseLayout.axml
+++ b/Buptis/Resources/layout/LoginBaseLayout.axml
@@ -50,6 +50,7 @@
 					android:id="@+id/relativeLayout3">
 					<EditText
 						android:layout_width="match_parent"
+                        android:singleLine="true"
 						android:layout_height="50dp"
 						android:hint="E-mail"
 						android:textColorHint="#ffffff"
@@ -64,6 +65,7 @@
 						 />
 					<EditText
 						android:layout_width="match_parent"
+                        android:singleLine="true"
 						android:layout_height="50dp"
 						android:hint="Şifre"
 						android:layout_marginTop="20dp"
