--- a/Buptis/Resources/layout/HorizontalMapCardView.axml
+++ b/Buptis/Resources/layout/HorizontalMapCardView.axml
@@ -3,11 +3,12 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:orientation="vertical"
-	android:paddingRight="25dp"
 	android:background="@android:color/transparent"
+	android:paddingRight="20dp"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content">
 	<android.support.v7.widget.CardView
+		android:layout_marginTop="25dp"
 		android:id="@+id/card_view"
 		app:cardBackgroundColor="@android:color/transparent"
 		android:layout_width="match_parent"
@@ -24,113 +25,124 @@
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:id="@+id/linearLayout1">
-			<RelativeLayout
-				android:minWidth="25px"
-				android:minHeight="25px"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:id="@+id/relativeLayout1">
-				<LinearLayout
-					android:background="@drawable/cardviewbg"
-					android:orientation="vertical"
-					android:minWidth="25px"
-					android:minHeight="25px"
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:id="@+id/linearLayout2"
-					android:layout_marginLeft="20.0dp">
-					<TextView
-						android:layout_marginLeft="10dp"
-						android:textStyle="bold"
-						android:textSize="15dp"
-						android:textColor="#221e20"
-						android:layout_marginTop="56.5dp"
-						android:text="Alışveriş Merkezi"
-						android:textAppearance="?android:attr/textAppearanceMedium"
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content"
-						android:id="@+id/textView3" />
-					<RelativeLayout
-						android:minWidth="25px"
-						android:minHeight="25px"
-						android:layout_width="match_parent"
-						android:layout_height="26.5dp"
-						android:id="@+id/relativeLayout2"
-						android:layout_marginBottom="12.5dp">
-						<TextView
-							android:gravity="center_vertical"
-							android:layout_marginLeft="10dp"
-							android:textStyle="bold"
-							android:textSize="15dp"
-							android:textColor="#221e20"
-							android:text="Kuruçeşme / 1 Km"
-							android:textAppearance="?android:attr/textAppearanceMedium"
-							android:layout_width="wrap_content"
-							android:layout_height="match_parent"
-							android:id="@+id/textView4" />
-						<LinearLayout
-							android:layout_marginRight="10dp"
-							android:orientation="horizontal"
-							android:minWidth="25px"
-							android:minHeight="25px"
-							android:layout_width="100.0dp"
-							android:layout_height="match_parent"
-							android:layout_alignParentRight="true"
-							android:id="@+id/linearLayout3">
-							<ImageView
-								android:scaleType="centerInside"
-								android:src="@mipmap/groupp"
-								android:layout_width="20dp"
-								android:layout_height="match_parent"
-								android:id="@+id/ımageView1" />
-							<ProgressBar
-								android:layout_marginLeft="5dp"
-								android:progressDrawable="@drawable/customprogressbg"
-								android:layout_gravity="center_vertical"
-								android:progress="50"
-								android:id="@+id/dolulukprogress"
-								style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-								android:layout_width="match_parent"
-								android:layout_height="8dp"
+            <RelativeLayout
+                android:minWidth="25px"
+                android:minHeight="25px"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/relativeLayout1">
+                <LinearLayout
+                    android:background="@drawable/cardviewbg"
+                    android:orientation="vertical"
+                    android:minWidth="25px"
+                    android:minHeight="25px"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/linearLayout2"
+                    android:layout_marginLeft="20.0dp">
+                    <TextView
+                        android:layout_marginLeft="10dp"
+                        android:textStyle="bold"
+                        android:textSize="15dp"
+                        android:textColor="#221e20"
+                        android:layout_marginTop="56.5dp"
+                        android:text="Alışveriş Merkezi"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView3" />
+                    <RelativeLayout
+                        android:minWidth="25px"
+                        android:minHeight="25px"
+                        android:layout_width="match_parent"
+                        android:layout_height="26.5dp"
+                        android:id="@+id/relativeLayout2"
+                        android:layout_marginBottom="12.5dp">
+                        <LinearLayout
+                            android:layout_marginRight="10dp"
+                            android:orientation="horizontal"
+                            android:minWidth="25px"
+                            android:minHeight="25px"
+                            android:layout_width="100.0dp"
+                            android:layout_height="match_parent"
+                            android:layout_alignParentRight="true"
+                            android:id="@+id/linearLayout3">
+                            <ImageView
+                                android:scaleType="centerInside"
+                                android:src="@mipmap/groupp"
+                                android:layout_width="20dp"
+                                android:layout_height="match_parent"
+                                android:id="@+id/ımageView1" />
+                            <ProgressBar
+                                android:layout_marginLeft="5dp"
+                                android:progressDrawable="@drawable/customprogressbg"
+                                android:layout_gravity="center_vertical"
+                                android:progress="50"
+                                android:id="@+id/dolulukprogress"
+                                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                                android:layout_width="match_parent"
+                                android:layout_height="8dp"
 								/>
-						</LinearLayout>
-					</RelativeLayout>
-				</LinearLayout>
-				<TextView
-					android:textSize="20dp"
-					android:gravity="center_vertical"
-					android:layout_marginTop="10dp"
-					android:textColor="#fff"
-					android:textStyle="bold"
-					android:paddingLeft="30dp"
-					android:paddingRight="10dp"
-					android:maxWidth="200dp"
-					android:background="@drawable/cardviewlocationnamebg"
-					android:text="ZORLU CENTER"
-					android:layout_width="wrap_content"
-					android:layout_height="35dp"
-					android:ellipsize="marquee"
-					android:focusable="true"
-					android:focusableInTouchMode="true"
-					android:maxLines="1"
-					android:scrollHorizontally="true"
-					android:id="@+id/textView1" />
-				<TextView
-					android:paddingBottom="3dp"
-					android:textSize="16dp"
-					android:layout_marginRight="10dp"
-					android:layout_alignParentRight="true"
-					android:gravity="center"
-					android:background="@mipmap/kalp"
-					android:textColor="#fff"
-					android:textStyle="bold"
-					android:layout_marginTop="10dp"
-					android:text="3,7"
-					android:textAppearance="?android:attr/textAppearanceMedium"
-					android:layout_width="40dp"
-					android:layout_height="40dp"
-					android:id="@+id/textView2" />
-			</RelativeLayout>
+                        </LinearLayout>
+                        <TextView
+                            android:gravity="center_vertical"
+                            android:layout_marginLeft="10dp"
+                            android:textStyle="bold"
+                            android:textSize="15dp"
+                            android:textColor="#221e20"
+                            android:text="Kuruçeşme / 1 Km"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/textView4"
+                            android:layout_toLeftOf="@id/linearLayout3" />
+                    </RelativeLayout>
+                </LinearLayout>
+                <TextView
+                    android:paddingBottom="3dp"
+                    android:textSize="16dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_alignParentRight="true"
+                    android:gravity="center"
+                    android:background="@mipmap/kalp"
+                    android:textColor="#fff"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"
+                    android:text="3,7"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:id="@+id/textView2" />
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:minWidth="25px"
+                    android:minHeight="25px"
+                    android:layout_width="match_parent"
+                    android:layout_height="40.0dp"
+                    android:id="@+id/linearLayout4"
+                    android:layout_toLeftOf="@id/textView2"
+                    android:layout_marginTop="10.0dp"
+                    android:layout_marginRight="18.5dp">
+                    <TextView
+                        android:textSize="20dp"
+                        android:gravity="center_vertical"
+                        android:textColor="#fff"
+                        android:textStyle="bold"
+                        android:paddingLeft="30dp"
+                        android:paddingRight="10dp"
+                        android:maxWidth="250dp"
+                        android:background="@drawable/cardviewlocationnamebg"
+                        android:text="ZORLU CENTER"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="marquee"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:maxLines="1"
+                        android:scrollHorizontally="true"
+                        android:id="@+id/textView1" />
+                </LinearLayout>
+            </RelativeLayout>
 		</LinearLayout>
 	</android.support.v7.widget.CardView>
 </LinearLayout>
