--- a/Buptis/Resources/layout/PrivateProfileEngelliListesi.axml
+++ b/Buptis/Resources/layout/PrivateProfileEngelliListesi.axml
@@ -44,12 +44,10 @@
 				android:layout_marginRight="27.5dp" />
 		</RelativeLayout>
 	</LinearLayout>
-	 <ListView
-        android:divider="@null"
-        android:dividerHeight="0dp"
+    <GridView
         android:minWidth="25px"
         android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listView1" />
+        android:id="@+id/gridView1" />
 </LinearLayout>
