--- a/Buptis/Resources/layout/PrivateProfileTemelBilgiler.axml
+++ b/Buptis/Resources/layout/PrivateProfileTemelBilgiler.axml
@@ -124,6 +124,8 @@
 			android:layout_width="match_parent"
 			android:layout_height="42.0dp"
 			android:id="@+id/editText1"
+            android:maxLines="1"
+            android:maxLength="30"
 			android:layout_marginTop="0.0dp" />
 		<View
 			android:layout_margin="20dp"
