--- a/Buptis/Resources/layout/StoreGold.xml
+++ b/Buptis/Resources/layout/StoreGold.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -12,45 +13,53 @@
         android:id="@+id/rootView"
         android:background="@drawable/storebackground"
         android:layout_alignParentBottom="true">
-        <LinearLayout
+        <RelativeLayout
+            
             android:orientation="horizontal"
             android:minWidth="25px"
             android:minHeight="25px"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:id="@+id/linearLayout2" >
-            <TextView
-                android:text="Buptis Gold"
-                android:textColor="#BC9F43"
-                android:textSize="24dp"
-                android:textStyle="bold"
-                android:layout_width="251.0dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginLeft="30dp"
-                android:layout_height="match_parent"
-                android:id="@+id/textView1"
-                android:layout_marginRight="0.0dp" />
+            android:id="@+id/linearLayout2">
             <ImageButton
+                android:layout_alignParentRight="true"
                 android:src="@mipmap/close_gold"
                 android:background="@null"
                 android:scaleType="centerInside"
                 android:padding="20dp"
-                android:layout_width="81.0dp"
+                android:layout_width="70.5dp"
                 android:layout_height="match_parent"
                 android:id="@+id/ımageButton1" />
-        </LinearLayout>
+            <TextView
+                android:paddingLeft="30dp"
+                android:gravity="center_vertical"
+                android:layout_alignParentLeft="true"
+                android:text="Buptis Gold"
+                android:textColor="#BC9F43"
+                android:textSize="24dp"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_marginTop="0.0dp"
+                android:layout_marginLeft="0.0dp"
+                android:layout_height="match_parent"
+                android:id="@+id/textView1"
+                android:layout_marginRight="0.0dp"
+                android:layout_toLeftOf="@id/ımageButton1" />
+        </RelativeLayout>
         <android.support.v4.view.ViewPager
             android:minWidth="25px"
             android:minHeight="25px"
             android:layout_width="match_parent"
             android:layout_height="160dp"
             android:id="@+id/goldviewpager" />
-        <DK.Ostebaronen.Droid.ViewPagerIndicator.LinePageIndicator
+        <dk.ostebaronen.droid.viewpagerindicator.LinePageIndicator
+            android:id="@+id/indicator"
+            android:padding="10dip"
+            android:layout_height="30dp"
             android:layout_width="match_parent"
-            android:layout_height="26.0dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:id="@+id/linePageIndicator1"/>
+            android:layout_marginRight="2.0dp" />
         <RelativeLayout
             android:minWidth="25px"
             android:minHeight="25px"
