--- a/Buptis/Resources/layout/StoreSuperBoost.xml
+++ b/Buptis/Resources/layout/StoreSuperBoost.xml
@@ -13,7 +13,7 @@
         android:id="@+id/rootView"
         android:background="@drawable/storebackground"
         android:layout_alignParentBottom="true">
-        <LinearLayout
+        <RelativeLayout
             android:orientation="horizontal"
             android:minWidth="25px"
             android:minHeight="25px"
@@ -21,25 +21,29 @@
             android:layout_height="60dp"
             android:id="@+id/linearLayout2" >
             <TextView
+                android:paddingLeft="30dp"
+                android:gravity="center_vertical"
+                android:layout_alignParentLeft="true"
                 android:text="Super Boost"
                 android:textColor="#E10068"
                 android:textSize="22dp"
                 android:textStyle="bold"
                 android:layout_width="251.0dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginLeft="30dp"
+                android:layout_marginTop="0.0dp"
+                android:layout_marginLeft="0.0dp"
                 android:layout_height="match_parent"
                 android:id="@+id/textView1"
                 android:layout_marginRight="0.0dp" />
             <ImageButton
+                 android:layout_alignParentRight="true"
                 android:src="@mipmap/close_boost"
                 android:background="@null"
                 android:scaleType="centerInside"
                 android:padding="20dp"
-                android:layout_width="81.0dp"
+                android:layout_width="70.5dp"
                 android:layout_height="match_parent"
                 android:id="@+id/ımageButton1" />
-        </LinearLayout>
+        </RelativeLayout>
         <RelativeLayout
             android:minWidth="25px"
             android:minHeight="25px"
