--- a/Buptis/Resources/layout/HorizontalMapCardView.axml
+++ b/Buptis/Resources/layout/HorizontalMapCardView.axml
@@ -8,7 +8,8 @@
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content">
 	<android.support.v7.widget.CardView
-		android:layout_marginTop="25dp"
+		android:layout_marginTop="12.5dp"
+		android:layout_marginBottom="12.5dp"
 		android:id="@+id/card_view"
 		app:cardBackgroundColor="@android:color/transparent"
 		android:layout_width="match_parent"
