--- a/Buptis/Resources/layout/StoreGold.xml
+++ b/Buptis/Resources/layout/StoreGold.xml
@@ -14,7 +14,6 @@
         android:background="@drawable/storebackground"
         android:layout_alignParentBottom="true">
         <RelativeLayout
-            
             android:orientation="horizontal"
             android:minWidth="25px"
             android:minHeight="25px"
@@ -88,7 +87,7 @@
                     android:layout_below="@id/ımageView1"
                     android:id="@+id/txt1" />
                 <TextView
-                    android:text="44,00 ₺"
+                    android:text="99,90₺"
                     android:textColor="#999999"
                     android:textSize="14dp"
                     android:gravity="center"
@@ -97,7 +96,7 @@
                     android:layout_below="@+id/txt1"
                     android:id="@+id/tv1" />
                 <TextView
-                    android:text="24,00 ₺"
+                    android:text="59,90₺"
                     android:textColor="@android:color/white"
                     android:textSize="16dp"
                     android:gravity="center"
@@ -127,7 +126,7 @@
                     android:layout_below="@id/ımageView1"
                     android:id="@+id/txt2" />
                 <TextView
-                    android:text="300,00 ₺"
+                    android:text="79,90₺"
                     android:textColor="#999999"
                     android:textSize="14dp"
                     android:gravity="center"
@@ -136,7 +135,7 @@
                     android:layout_below="@+id/txt2"
                     android:id="@+id/tv2" />
                 <TextView
-                    android:text="34,00 ₺"
+                    android:text="49,90₺ x 6"
                     android:textColor="@android:color/white"
                     android:textSize="16dp"
                     android:gravity="center"
@@ -166,7 +165,7 @@
                     android:layout_below="@id/ımageView1"
                     android:id="@+id/txt3" />
                 <TextView
-                    android:text="54,00 ₺"
+                    android:text="39,90₺"
                     android:textColor="#999999"
                     android:textSize="14dp"
                     android:gravity="center"
@@ -175,7 +174,7 @@
                     android:layout_below="@+id/txt3"
                     android:id="@+id/tv3" />
                 <TextView
-                    android:text="34,00 ₺"
+                    android:text="29,90₺ x 12"
                     android:textColor="@android:color/white"
                     android:textSize="16dp"
                     android:gravity="center"
@@ -199,5 +198,4 @@
             android:id="@+id/button1"
             android:layout_marginTop="14.0dp"/>
     </LinearLayout>
-
 </RelativeLayout>
